--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
+# requirements.txt
 streamlit>=1.35.0
 opencv-python==4.9.0.80
-numpy<2.0
-scikit-learn>=1.3
-xgboost>=2.0.0
+numpy==1.24.4
+scikit-learn==1.3.2
+xgboost==2.0.3
