--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
-streamlit>=1.35.0
-opencv-python==4.9.0.80
-numpy==1.24.4
-scikit-learn==1.3.2
-xgboost==2.0.3
+streamlit>=1.34.0
+pandas
+numpy
+scikit-learn
+matplotlib
+Pillow
+
